--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Ankit Bhadani</h1>
+        <p><button id="changeColor">Change Background Color</button></p>
         <nav>
             <ul>
                 <li>
