Added JS button to change background color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
     <header>
         <h1>Ankit Bhadani</h1>
-        <p><button id="changeColor">Change Background Color</button></p>
         <nav>
             <ul>
                 <li>
@@ -26,6 +25,7 @@
         <h2>About Me</h2>
         <img src="https://via.placeholder.com/150" alt="My photo">
         <p>I am Ankit Bhadani and I am a tech student and want to learn new things everyday. My current goal is to learn web technology in next 6 months</p>
+        <p><button id="changeColor">Change Background Color</button></p>
     </section>
     <section id="hobbies">
         <h2>My hobbies are:</h2>
@@ -37,6 +37,6 @@
     </section>
     <footer>
         <p>© 2025 Ankit Bhadani. All rights reserved.</p>
-    </footer>
+<script src="script.js"></script>
 </body>
 </html>
