Added some new JS for todo list and Toggle button for Hobbies

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         <p>I am Ankit Bhadani and I am a tech student and want to learn new things everyday. My current goal is to learn web technology in next 6 months</p>
         <p><button id="changeColor">Change Background Color</button></p>
     </section>
+    <section id="todo">
+        <h2>My Todo List:</h2>
+        <input type="text" id="todoinput" placeholder="Add a new task">
+        <button id="addtodo">Add</button>
+        <ul id="todoList"></ul>
+    </section>
+    <button id="toggle">Show/Hide Hobbies</button>
     <section id="hobbies">
         <h2>My hobbies are:</h2>
         <ul>
