Added a placeholder image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <section id="about">
         <h2>About Me</h2>
-        <img src="https://via.placeholder.com/150" alt="My photo">
+        <img src="download.webp" alt="My photo">
         <p>I am Ankit Bhadani and I am a tech student and want to learn new things everyday. My current goal is to learn web technology in next 6 months</p>
         <p><button id="changeColor">Change Background Color</button></p>
     </section>
