Added a done task logic in todo list

--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
             <li>Playing simple sports</li>
         </ul>
     </section>
+    <noscript>
+        <p style="color:red; text-align:center;">This site requires JavaScript enabled for the Todo list to work.</p>
+    </noscript>
+
     <footer>
         <p>© 2025 Ankit Bhadani. All rights reserved.</p>
+    </footer>
 <script src="script.js"></script>
 </body>
 </html>
